# Priority: High
# Test ID: C202842
# Title: Side Menu items do not crash
# Expected Result:
#   1. No crash when tapping into each Side Menu item

appId: ${MAESTRO_APP_ID}
tags:
- android
- C202842a
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_UTXO_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_UTXO_PASSWORD}

# If the request notifications modal show with "Security is Our Priority"
# Cancel it
- tapOn:
    text: "Cancel"
    optional: true

# If the survey modal shows, dismiss it
- extendedWaitUntil:
    visible: "How Did You Discover"
    timeout: 20000
    optional: true
- tapOn:
    text: "Dismiss"
    optional: true

- extendedWaitUntil:
    visible: "Assets"
    timeout: 15000
- assertVisible:
    id: "sideMenuButton"
- tapOn:
    id: "sideMenuButton"
- assertVisible: FIO Names
- assertVisible: FIO Requests
- assertVisible: WalletConnect
- assertVisible: Scan QR
- assertVisible: Share Edge
- assertVisible: Settings
- assertVisible: Logout
- tapOn: "FIO Names"
- assertVisible: "FIO Crypto Handles"
- assertVisible:
    id: "sideMenuButton"
- assertVisible:
    id: "chevronBack"
- tapOn:
    id: "chevronBack"
- tapOn:
    id: "sideMenuButton"
- tapOn: "FIO Requests"
- assertVisible: "Pending Requests"
- assertVisible:
    id: "sideMenuButton"
- assertVisible:
    id: "chevronBack"
- tapOn:
    id: "chevronBack"
- tapOn:
    id: "sideMenuButton"
- tapOn: "WalletConnect"
- assertVisible: "WalletConnect"
- assertVisible:
    id: "chevronBack"
- assertVisible:
    id: "sideMenuButton"
- tapOn:
    id: "chevronBack"
- tapOn:
    id: "sideMenuButton"
- tapOn: "Scan QR"
- assertVisible: "Scan QR Code"
- tapOn:
    id: "xCloseButton"
- tapOn:
    id: "sideMenuButton"
# - tapOn: "Share Edge"
# - assertVisible: "Copy"
# - tapOn: "Copy"
- tapOn: "Settings"
- assertVisible: "Settings"
- assertVisible:
    id: "sideMenuButton"
- assertVisible:
    id: "chevronBack"
- tapOn:
    id: "chevronBack"
- tapOn:
    id: "sideMenuButton"
- tapOn: "Logout"
- assertVisible: "Exit PIN"

- stopApp
