# Reintegration Note: check for iOS compatibility

# Priority: Critical
# Test ID: C999003
# Title: Help modal is correct
# Expected Result:
#   1. Able to tap on Help button while logged into an account
#   2. Help modal visually correct
#   3. Able to tap into each Help item

appId: ${MAESTRO_APP_ID}
tags:
- android
- C999003
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_UTXO_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_UTXO_PASSWORD}
- runFlow:
    file: ../common/dismiss-modals.yaml

- tapOn: "Assets"
- extendedWaitUntil:
    visible: "FIRO"
    timeout: 15000
- assertVisible: "Help"
- tapOn: "Help"
- assertVisible: "Thanks for using Edge!"
- assertVisible: "Knowledge Base"
- assertVisible: "Live Chat"
- assertVisible: "Call for Assistance"
- assertVisible: "Visit Official Site"
- tapOn: "Knowledge Base"
- extendedWaitUntil:
    visible: ".*Troubleshooting for Edge related issues.*"
    timeout: 15000
- assertVisible:
    id: "chevronBack"
- tapOn:
    id: "chevronBack"
# Live chat opens in new browser
- tapOn: "Help"
- tapOn: "Live Chat"
# Ensure it opens to correct page AND chat is open
- assertVisible: ".*support\\.edge\\.app.*" 
- assertVisible: ".*Need Help\\? Reach Out via Our Chat Bubble!.*"
# Call button opens in phone app
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: "Call for Assistance"
    timeout: 15000
- tapOn: "Call for Assistance"
# Optional for iOS simulator (unable to open phone app)
- extendedWaitUntil:
    visible: "+1 619-777-5688"
    timeout: 5000
    optional: true
    label: "Phone number visible (Optional for iOS simulator)"
- launchApp:
    stopApp: false
- tapOn: "Visit Official Site"
- assertVisible:
    text: "Learn more about Edge"
- assertVisible:
    id: "chevronBack"
- tapOn:
    id: "chevronBack"

- stopApp
